<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_puzzle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/aboutLinearLayoutV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutHowToPlayTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:foregroundGravity="center_vertical|center"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:text="@string/aboutHowToPlayText"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutMoveTilesTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/aboutMoveTileText" />

            <TextView
                android:id="@+id/aboutRotateTilesTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/aboutRotateTileText" />

            <TextView
                android:id="@+id/aboutReassembleTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/aboutReassemblePictureText" />

            <Button
                android:id="@+id/playPuzzleButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="OpenPuzzle"
                android:text="@string/playPuzzle"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutLinearLayoutH"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aboutMenuTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gameVersionTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aboutBuildVersion"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>